--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"concurrently \"node index.js\" \"node Search/index.js\" \"node Stockdata/index.js\" "
   },
   "keywords": [],
   "author": "",
