--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "popper.js": "^1.16.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "redis": "^2.8.0",
     "socket-io": "^1.0.0",
     "socket.io": "^2.3.0",
