--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redis": "^2.8.0",
+    "redux": "^4.0.4",
     "socket-io": "^1.0.0",
     "socket.io": "^2.3.0",
     "uuid": "^3.3.3"
@@ -43,6 +44,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.0",
+    "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^8.0.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
