--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.0",
     "bluebird": "^3.7.1",
     "body-parser": "^1.19.0",
+    "clsx": "^1.0.4",
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
     "flexsearch": "^0.6.32",
