--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "dependencies": {
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.34",
     "axios": "^0.19.0",
     "bluebird": "^3.7.1",
     "body-parser": "^1.19.0",
     "clsx": "^1.0.4",
     "concurrently": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "flexsearch": "^0.6.32",
     "http": "0.0.0",
     "local-storage": "^2.0.0",
+    "lodash": "^4.17.15",
     "mongodb": "^3.3.5",
     "node-redis-pubsub": "^4.0.0",
     "node-uuid": "^1.4.8",
