--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "body-parser": "^1.19.0",
     "clsx": "^1.0.4",
     "concurrently": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "flexsearch": "^0.6.32",
     "http": "0.0.0",
     "local-storage": "^2.0.0",
+    "mongo-sanitize": "^1.0.1",
     "mongodb": "^3.3.5",
     "node-redis-pubsub": "^4.0.0",
     "node-uuid": "^1.4.8",
