--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^7.1.3",
     "redis": "^2.8.0",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "socket-io": "^1.0.0",
     "socket.io": "^2.3.0",
     "uuid": "^3.3.3"
