--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "redux-thunk": "^2.3.0",
     "socket-io": "^1.0.0",
     "socket.io": "^2.3.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "victory": "^33.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
