--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http": "0.0.0",
     "local-storage": "^2.0.0",
     "lodash": "^4.17.15",
+    "mongo-sanitize": "^1.0.1",
     "mongodb": "^3.3.5",
     "node-redis-pubsub": "^4.0.0",
     "node-uuid": "^1.4.8",
